# builder-agent-demo

./: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs  main.rs
src/components/: RoleCard.tsx
src/components/preview/: CodePreview.tsx  DesignPreview.tsx  DocumentPreview.tsx  DynamicPreview.tsx
src/components/workspace/: ChatInput.tsx  ChatPanel.tsx  MessageBubble.tsx  PreviewPanel.tsx
src/context/: BuilderContext.tsx
src/pages/: Chat.tsx  Home.tsx
